--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <repositories>
     <repository>
@@ -26,17 +25,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 <distributionManagement>
-    <repository>
-      <id>myapp-releases</id>
-      <name>myapp-releases</name>
-      <url>http://ip-172-31-23-20.ap-south-1.compute.internal:8081/nexus/content/repositories/myapp-releases/</url>
-    </repository>
+
+  <repository>
+    <id>vcard-release</id>
+    <url>http://10.128.0.3:8081/nexus/content/repositories/vcard-release</url>
+  </repository>
+  
     <snapshotRepository>
-      <id>myapp-snapshots</id>
-      <name>myapp-snapshots</name>
-      <url>http://ip-172-31-23-20.ap-south-1.compute.internal:8081/nexus/content/repositories/myapp-snapshots/</url>
-    </snapshotRepository>
+    <id>vcard-snapshot</id>
+    <url>http://10.128.0.3:8081/nexus/content/repositories/vcard-snapshot</url>
+  </snapshotRepository>
+  
 </distributionManagement>
+
+
 
 </project>
