--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
+  <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <repositories>
     <repository>
@@ -36,7 +37,7 @@
     <snapshotRepository>
     <id>vcard-snapshot</id>
     <url>http://10.128.0.3:8081/nexus/content/repositories/vcard-snapshot</url>
-    </snapshotRepository>
+  </snapshotRepository>
   
 </distributionManagement>
 
