--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <url>https://github.com/rishabh20111990/maven-myapp/tree/master/src</url>   
     <connection>scm:git:https://github.com/rishabh20111990/maven-myapp.git</connection>
  <developerConnection>scm:git:https://github.com/rishabh20111990/maven-myapp.git</developerConnection>
+   <tag>HEAD</tag>
     </scm>
 
 </project>
