--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.12</version>
+  <version>1.13-SNAPSHOT</version>
   <name>my-app</name>
   <repositories>
     <repository>
@@ -46,7 +46,7 @@
     <url>https://github.com/rishabh20111990/maven-myapp/tree/master/src</url>   
     <connection>scm:git:https://github.com/rishabh20111990/maven-myapp.git</connection>
  <developerConnection>scm:git:https://github.com/rishabh20111990/maven-myapp.git</developerConnection>
-   <tag>my-app-1.12</tag>
+   <tag>HEAD</tag>
 </scm>
 
 </project>
